--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -79,14 +79,14 @@ body {
   p {
     color: white;
     font-size: 20px;
-    font-family: "RobotoThin", sans-serif;
+    font-family: "RobotoRegular", sans-serif;
   }
   .overview {
     text-align: center;
     form {
       text-align: center;
       margin-top: 20px;
-      margin-bottom: 60px;
+      margin-bottom: 20px;
       @media (max-width: 768px) {
         margin-bottom: 20px;
       }
@@ -114,7 +114,7 @@ body {
       }
       .submit-button {
         cursor: pointer;
-        font-size: 20px;
+        font-size: 14px;
         height: 40px;
         width: 80px;
         border-radius: 40px;
@@ -133,18 +133,18 @@ body {
     .navigation {
       text-align: center;
       padding-top: 30px;
-      padding-bottom: 60px;
-      @media (max-width: 768px) {
-        padding-bottom: 20px;
-      }
+      padding-bottom: 20px;
       .navigation-button {
-        height: 20px;
-        width: 20px;
+        height: 30px;
+        width: 30px;
         display: inline-block;
         position: relative;
         top: 3px;
         img {
           height: 20px;
+          @media (max-width: 768px) {
+            height: 14px;
+          }
         }
         &:hover {
           opacity: 0.7;
@@ -155,17 +155,17 @@ body {
         padding-left: 40px;
         padding-right: 20px;
         @media (max-width: 768px) {
-          padding-left: 20px;
+          padding-left: 15px;
           padding-right: 0;
         }
         .page-number {
           cursor: pointer;
-          height: 40px;
-          width: 40px;
+          height: 30px;
+          width: 30px;
           border-radius: 40px;
           margin: 5px;
           color: white;
-          font-size: 20px;
+          font-size: 14px;
           @media (max-width: 768px) {
             height: 25px;
             width: 25px;
@@ -177,6 +177,7 @@ body {
       }
     }
     .link-list {
+      margin-bottom: 20px;
       .link-li {
         background: rgba(255, 255, 255, 0.1);
         text-align: left;
@@ -187,6 +188,9 @@ body {
         button {
           img {
             height: 16px;
+            @media (max-width: 768px) {
+              height: 12px;
+            }
           }
         }
         .delete-button,
@@ -203,20 +207,23 @@ body {
         .link-item {
           margin-left: 10px;
           @media (max-width: 768px) {
-            font-size: 14px;
+            font-size: 12px;
           }
         }
       }
     }
-    .reset-data {
+    .load-sample-data, .clear-data {
       background-color: transparent;
       color: white;
-      font-size: 20px;
+      font-size: 14px;
       height: 42px;
-      width: 150px;
+      width: 40%;
+      max-width: 200px;
+      margin-left: 10px;
+      margin-right: 10px;
       border: 1px solid white;
       border-radius: 42px;
-      margin-top: 20px;
+      display: inline-block;
       margin-bottom: 20px;
       &:hover {
         background-color: rgba(255, 255, 255, 0.1);
