just need to add technical design document and readme

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,8 +15,14 @@
   src: url("../fonts/Roboto-Thin.ttf");
 }
 
-.hidden {
-  display: none;
+//REVIEW ABOVE HERE
+
+body {
+  background: #360033;
+  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);
+  background: linear-gradient(to bottom, #0b8793, #360033);
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 input,
@@ -27,23 +33,13 @@ p {
   }
 }
 
-//REVIEW ABOVE HERE
-
-body {
-  background: #360033;
-  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);
-  background: linear-gradient(to bottom, #0b8793, #360033);
-  min-height: 100vh;
-  background-attachment: fixed;
-}
-
 .app-header {
+  color: white;
   font-family: "RobotoBold", sans-serif;
   font-size: 60px;
-  text-align: center;
-  color: white;
   margin-top: 30px;
   margin-bottom: 30px;
+  text-align: center;
   @media (max-width: 1224px) {
     font-size: 40px;
   }
@@ -53,9 +49,9 @@ body {
 }
 
 .content {
-  width: 50%;
-  margin: 0 auto;
   background-color: transparent;
+  margin: 0 auto;
+  width: 50%;
   @media (max-width: 1224px) {
     width: 70%;
   }
@@ -63,42 +59,42 @@ body {
     width: 97%;
   }
   button {
-    font-family: "RobotoRegular", sans-serif;
-    border: none;
     background-color: transparent;
+    border: none;
     cursor: pointer;
+    font-family: "RobotoRegular", sans-serif;
     outline: none;
   }
   h2 {
-    text-align: center;
     color: white;
+    font-family: "RobotoRegular", sans-serif;
     font-size: 24px;
     line-height: 30px;
-    font-family: "RobotoRegular", sans-serif;
+    text-align: center;
   }
   p {
     color: white;
-    font-size: 20px;
     font-family: "RobotoRegular", sans-serif;
+    font-size: 20px;
   }
   .overview {
     text-align: center;
     form {
-      text-align: center;
       margin-top: 20px;
       margin-bottom: 20px;
+      text-align: center;
       @media (max-width: 768px) {
         margin-bottom: 20px;
       }
       .url-input {
-        font-size: 20px;
-        width: 240px;
-        padding: 7px;
-        font-family: "RobotoRegular", sans-serif;
         background-color: rgba(255, 255, 255, 0.1);
         border: black;
         border-radius: 5px;
         color: white;
+        font-family: "RobotoRegular", sans-serif;
+        font-size: 20px;
+        padding: 7px;
+        width: 240px;
         &::-webkit-input-placeholder {
           color: white;
         }
@@ -113,15 +109,15 @@ body {
         }
       }
       .submit-button {
+        background-color: transparent;
+        border: 1px solid white;
+        border-radius: 40px;
+        color: white;
         cursor: pointer;
         font-size: 14px;
         height: 40px;
-        width: 80px;
-        border-radius: 40px;
-        border: 1px solid white;
         margin-left: 20px;
-        background-color: transparent;
-        color: white;
+        width: 80px;
         @media (max-width: 768px) {
           margin-top: 20px;
         }
@@ -131,15 +127,15 @@ body {
       }
     }
     .navigation {
-      text-align: center;
       padding-top: 30px;
       padding-bottom: 20px;
+      text-align: center;
       .navigation-button {
-        height: 30px;
-        width: 30px;
         display: inline-block;
+        height: 30px;
         position: relative;
         top: 3px;
+        width: 30px;
         img {
           height: 20px;
           @media (max-width: 768px) {
@@ -159,14 +155,15 @@ body {
           padding-right: 0;
         }
         .page-number {
-          cursor: pointer;
-          height: 30px;
-          width: 30px;
-          border-radius: 40px;
-          margin: 5px;
+          border-radius: 30px;
           color: white;
+          cursor: pointer;
           font-size: 14px;
+          height: 30px;
+          margin: 5px;
+          width: 30px;
           @media (max-width: 768px) {
+            border-radius: 25px;
             height: 25px;
             width: 25px;
           }
@@ -180,11 +177,11 @@ body {
       margin-bottom: 20px;
       .link-li {
         background: rgba(255, 255, 255, 0.1);
-        text-align: left;
-        margin-top: 5px;
-        margin-bottom: 5px;
         border-radius: 5px;
+        margin-bottom: 5px;
+        margin-top: 5px;
         padding: 5px;
+        text-align: left;
         button {
           img {
             height: 16px;
@@ -212,19 +209,20 @@ body {
         }
       }
     }
-    .load-sample-data, .clear-data {
+    .load-sample-data,
+    .clear-data {
       background-color: transparent;
-      color: white;
-      font-size: 14px;
-      height: 42px;
-      width: 40%;
-      max-width: 200px;
-      margin-left: 10px;
-      margin-right: 10px;
       border: 1px solid white;
       border-radius: 42px;
+      color: white;
       display: inline-block;
+      font-size: 14px;
+      height: 42px;
       margin-bottom: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      max-width: 200px;
+      width: 40%;
       &:hover {
         background-color: rgba(255, 255, 255, 0.1);
       }
@@ -233,25 +231,28 @@ body {
   .results {
     text-align: center;
     .new-url {
-      padding-top: 24px;
+
       padding-bottom: 24px;
+      padding-top: 24px;
     }
     .overview-page-link {
-      background-color: white;
-      color: black;
+      background-color: transparent;
+      border: 1px solid white;
+      border-radius: 42px;
+      color: white;
       font-size: 20px;
       height: 42px;
-      width: 80px;
-      border-radius: 42px;
-      border: 1px solid white;
       margin-left: 20px;
-      color: white;
-      background-color: transparent;
+      width: 80px;
       &:hover {
         background-color: rgba(255, 255, 255, 0.1);
       }
     }
   }
+}
+
+.hidden {
+  display: none;
 }
 
 //REVIEW BELOW HERE
@@ -278,17 +279,17 @@ body {
 }
 
 #spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -30px 0 0 -30px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  border-top: 10px solid white;
-  border-right: 10px solid white;
   border-bottom: 10px solid grey;
   border-left: 10px solid grey;
+  border-right: 10px solid white;
+  border-radius: 50%;
+  border-top: 10px solid white;
+  height: 60px;
+  left: 50%;
+  margin: -30px 0 0 -30px;
+  position: absolute;
+  top: 50%;
+  width: 60px;
 
   -webkit-animation: spinner 1.2s infinite linear;
   -moz-animation: spinner 1.2s infinite linear;
