--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,28 +47,25 @@ table {
   font-family: "RobotoThin";
   src: url("../fonts/Roboto-Thin.ttf"); }
 
-.hidden {
-  display: none; }
+body {
+  background: #360033;
+  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);
+  background: linear-gradient(to bottom, #0b8793, #360033);
+  background-attachment: fixed;
+  min-height: 100vh; }
 
 input:focus,
 textarea:focus,
 p:focus {
   outline: none; }
 
-body {
-  background: #360033;
-  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);
-  background: linear-gradient(to bottom, #0b8793, #360033);
-  min-height: 100vh;
-  background-attachment: fixed; }
-
 .app-header {
+  color: white;
   font-family: "RobotoBold", sans-serif;
   font-size: 60px;
-  text-align: center;
-  color: white;
   margin-top: 30px;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  text-align: center; }
   @media (max-width: 1224px) {
     .app-header {
       font-size: 40px; } }
@@ -77,9 +74,9 @@ body {
       font-size: 30px; } }
 
 .content {
-  width: 50%;
+  background-color: transparent;
   margin: 0 auto;
-  background-color: transparent; }
+  width: 50%; }
   @media (max-width: 1224px) {
     .content {
       width: 70%; } }
@@ -87,39 +84,39 @@ body {
     .content {
       width: 97%; } }
   .content button {
-    font-family: "RobotoRegular", sans-serif;
-    border: none;
     background-color: transparent;
+    border: none;
     cursor: pointer;
+    font-family: "RobotoRegular", sans-serif;
     outline: none; }
   .content h2 {
-    text-align: center;
     color: white;
+    font-family: "RobotoRegular", sans-serif;
     font-size: 24px;
     line-height: 30px;
-    font-family: "RobotoRegular", sans-serif; }
+    text-align: center; }
   .content p {
     color: white;
-    font-size: 20px;
-    font-family: "RobotoRegular", sans-serif; }
+    font-family: "RobotoRegular", sans-serif;
+    font-size: 20px; }
   .content .overview {
     text-align: center; }
     .content .overview form {
-      text-align: center;
       margin-top: 20px;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      text-align: center; }
       @media (max-width: 768px) {
         .content .overview form {
           margin-bottom: 20px; } }
       .content .overview form .url-input {
-        font-size: 20px;
-        width: 240px;
-        padding: 7px;
-        font-family: "RobotoRegular", sans-serif;
         background-color: rgba(255, 255, 255, 0.1);
         border: black;
         border-radius: 5px;
-        color: white; }
+        color: white;
+        font-family: "RobotoRegular", sans-serif;
+        font-size: 20px;
+        padding: 7px;
+        width: 240px; }
         .content .overview form .url-input::-webkit-input-placeholder {
           color: white; }
         .content .overview form .url-input::-moz-placeholder {
@@ -129,30 +126,30 @@ body {
         .content .overview form .url-input:-moz-placeholder {
           color: white; }
       .content .overview form .submit-button {
+        background-color: transparent;
+        border: 1px solid white;
+        border-radius: 40px;
+        color: white;
         cursor: pointer;
         font-size: 14px;
         height: 40px;
-        width: 80px;
-        border-radius: 40px;
-        border: 1px solid white;
         margin-left: 20px;
-        background-color: transparent;
-        color: white; }
+        width: 80px; }
         @media (max-width: 768px) {
           .content .overview form .submit-button {
             margin-top: 20px; } }
         .content .overview form .submit-button:hover {
           background-color: rgba(255, 255, 255, 0.1); }
     .content .overview .navigation {
-      text-align: center;
       padding-top: 30px;
-      padding-bottom: 20px; }
+      padding-bottom: 20px;
+      text-align: center; }
       .content .overview .navigation .navigation-button {
-        height: 30px;
-        width: 30px;
         display: inline-block;
+        height: 30px;
         position: relative;
-        top: 3px; }
+        top: 3px;
+        width: 30px; }
         .content .overview .navigation .navigation-button img {
           height: 20px; }
           @media (max-width: 768px) {
@@ -169,15 +166,16 @@ body {
             padding-left: 15px;
             padding-right: 0; } }
         .content .overview .navigation .page-numbers .page-number {
-          cursor: pointer;
-          height: 30px;
-          width: 30px;
-          border-radius: 40px;
-          margin: 5px;
+          border-radius: 30px;
           color: white;
-          font-size: 14px; }
+          cursor: pointer;
+          font-size: 14px;
+          height: 30px;
+          margin: 5px;
+          width: 30px; }
           @media (max-width: 768px) {
             .content .overview .navigation .page-numbers .page-number {
+              border-radius: 25px;
               height: 25px;
               width: 25px; } }
           .content .overview .navigation .page-numbers .page-number:hover {
@@ -186,11 +184,11 @@ body {
       margin-bottom: 20px; }
       .content .overview .link-list .link-li {
         background: rgba(255, 255, 255, 0.1);
-        text-align: left;
-        margin-top: 5px;
-        margin-bottom: 5px;
         border-radius: 5px;
-        padding: 5px; }
+        margin-bottom: 5px;
+        margin-top: 5px;
+        padding: 5px;
+        text-align: left; }
         .content .overview .link-list .link-li button img {
           height: 16px; }
           @media (max-width: 768px) {
@@ -208,39 +206,42 @@ body {
           @media (max-width: 768px) {
             .content .overview .link-list .link-li .link-item {
               font-size: 12px; } }
-    .content .overview .load-sample-data, .content .overview .clear-data {
+    .content .overview .load-sample-data,
+    .content .overview .clear-data {
       background-color: transparent;
-      color: white;
-      font-size: 14px;
-      height: 42px;
-      width: 40%;
-      max-width: 200px;
-      margin-left: 10px;
-      margin-right: 10px;
       border: 1px solid white;
       border-radius: 42px;
+      color: white;
       display: inline-block;
-      margin-bottom: 20px; }
-      .content .overview .load-sample-data:hover, .content .overview .clear-data:hover {
+      font-size: 14px;
+      height: 42px;
+      margin-bottom: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      max-width: 200px;
+      width: 40%; }
+      .content .overview .load-sample-data:hover,
+      .content .overview .clear-data:hover {
         background-color: rgba(255, 255, 255, 0.1); }
   .content .results {
     text-align: center; }
     .content .results .new-url {
-      padding-top: 24px;
-      padding-bottom: 24px; }
+      padding-bottom: 24px;
+      padding-top: 24px; }
     .content .results .overview-page-link {
-      background-color: white;
-      color: black;
+      background-color: transparent;
+      border: 1px solid white;
+      border-radius: 42px;
+      color: white;
       font-size: 20px;
       height: 42px;
-      width: 80px;
-      border-radius: 42px;
-      border: 1px solid white;
       margin-left: 20px;
-      color: white;
-      background-color: transparent; }
+      width: 80px; }
       .content .results .overview-page-link:hover {
         background-color: rgba(255, 255, 255, 0.1); }
+
+.hidden {
+  display: none; }
 
 @-webkit-keyframes spinner {
   to {
@@ -259,17 +260,17 @@ body {
     transform: rotate(360deg); } }
 
 #spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -30px 0 0 -30px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  border-top: 10px solid white;
-  border-right: 10px solid white;
   border-bottom: 10px solid grey;
   border-left: 10px solid grey;
+  border-right: 10px solid white;
+  border-radius: 50%;
+  border-top: 10px solid white;
+  height: 60px;
+  left: 50%;
+  margin: -30px 0 0 -30px;
+  position: absolute;
+  top: 50%;
+  width: 60px;
   -webkit-animation: spinner 1.2s infinite linear;
   -moz-animation: spinner 1.2s infinite linear;
   -ms-animation: spinner 1.2s infinite linear;
